# stelar

./: .gitignore  README.md  pyproject.toml
stelar/: application.py  os.py  settings.py
stelar/monitor/: file.py  process.py
tests/environment/: env.sh  stelar.yaml  test.py
