[tool.poetry]
name = "stelar"
version = "0.1.0"
description = ""
authors = ["david00154 <davidbriggs00154@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
prettytable = "^3.8.0"
ruamel-yaml = "^0.17.32"

[tool.poetry.scripts]
stelar = "stelar.application:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
